# Threaded_NC_SP

./: .gitignore  CMakeLists.txt  Kconfig  README.md  REMEDIATION_SUMMARY.md  arun_fota.conf  debug.conf  pm_static.yml  prj.conf  run_with_ncs.sh  sample.yaml  sysbuild.conf  sysbuild_Production.conf
boards/: Arun-ADC-Sensors.overlay  Arun-Motion-Sensor.overlay  Arun-NVS-FOTA.overlay  Arun-UART1.overlay  Arun-nrf21540dk_nrf52840.overlay  Arun-nrf52840dk_nrf52840.overlay  nrf52840dk_nrf52840.overlay
docs/: 22_07_26_2014_ble_producer_analysis.md  22_07_26_2022_ble_callsite_audit.md  22_07_26_2030_parser_analysis.md  22_07_26_2044_implementation_plan.md  23_07_26_0243_FIRMWARE_CHANGES_AND_REMEDIATION.md
src/: app_threads.c  app_threads.h  nurse_call_app.c  nurse_call_app.h  spo2_sensor.c  spo2_sensor.h  temp_sensor.c  temp_sensor.h
